--- a/app.json
+++ b/app.json
@@ -2,11 +2,16 @@
   "expo": {
     "name": "learn-english",
     "slug": "learn-english",
+    "platforms": [
+      "ios",
+      "android",
+      "web"
+    ],
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/splash2.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -21,6 +26,11 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "android": {
+      "package": "com.Eldor.Eldor",
+      "versionCode": 1
     }
+  }
   }
 }
